feat(test) Se crea colección de prueba de API